force-app/main/default/objects/Case/fields/Latest_SLA__c.field-meta.xml
<CustomField>
    <fullName>Latest_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest SLA</label>
    <referenceTo>SLA_Tracking__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>