force-app/main/default/objects/Case/fields/Managed_Services__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to indicate if the case is kept open upon creation as a result of an active Managed Services subscription on the Account. This is set by the CS_Automatic_case_receipt flow and is not editable on page layouts</description>
    <inlineHelpText>Indicates if the case remains open after creation due to an active Managed Services subscription on the Account.</inlineHelpText>
    <label>Managed Services</label>
    <type>Checkbox</type>
</CustomField>