force-app/main/default/objects/Case/fields/Milestone_Target_date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Target_date__c</fullName>
    <description>MK - 27.08.2021 - TSFDK-295 - Grabs target date from related milestone.</description>
    <label>Milestone Target date</label>
    <type>DateTime</type>
</CustomField>