force-app/main/default/objects/Case/fields/MIT__c.field-meta.xml
<CustomField>
    <fullName>MIT__c</fullName>
    <inlineHelpText>Please remember to add a MIT if you are working on a Fiber Activation Case</inlineHelpText>
    <label>MIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>