force-app/main/default/objects/Case/fields/Mobile_and_UC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_and_UC__c</fullName>
    <description>ACTIVATION.</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O1i000001aicGEAQ/view?fv0=&quot;&amp; Id, &quot;Mobile, UC Data&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generates a report that can be exported to excel and sent to the customer for enrichment</inlineHelpText>
    <label>Mobile and UC</label>
    <type>Text</type>
</CustomField>