force-app/main/default/objects/Case/fields/Mobile_Data_Gathering_Report__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Data_Gathering_Report__c</fullName>
    <description>ACTIVATION.</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O1i000001aicDEAQ/view?fv0=&quot;&amp; Id, &quot;Mobile Data&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generates a report that can be exported to excel and sent to the customer for enrichment</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>