force-app/main/default/objects/Case/fields/Name_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_from_Account__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name from Account</label>
    <type>Text</type>
</CustomField>