force-app/main/default/objects/Case/fields/Need_Help_With_Data_Collection__c.field-meta.xml
<CustomField>
    <fullName>Need_Help_With_Data_Collection__c</fullName>
    <description>Added for Business Internet</description>
    <label>Need Help With Data Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>