force-app/main/default/objects/Case/fields/New_Message__c.field-meta.xml
<CustomField>
    <fullName>New_Message__c</fullName>
    <description>Set to true whenever a new message related to case have been received. This could be an Email from a Customer or a message from a user whom set status manually on the case.</description>
    <formula>IF( (Awaiting_user__c = true),  
    IMAGE(&quot;/img/func_icons/util/alert16.gif&quot;, &quot;Yellow&quot;, 16, 16), 
     &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Message</label>
    <type>Text</type>
</CustomField>