force-app/main/default/objects/Case/fields/New_Message_from_Portal__c.field-meta.xml
<CustomField>
    <fullName>New_Message_from_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field used to indicate whenever a customer writes a message to the customer service via the Onboarding Portal. Used to assign case to a new queue.</description>
    <label>New Message from Portal</label>
    <type>Checkbox</type>
</CustomField>