force-app/main/default/objects/Case/fields/No_of_Activations_with_eSim__c.field-meta.xml
<CustomField>
    <fullName>No_of_Activations_with_eSim__c</fullName>
    <label>No of Activations with eSim</label>
    <summaryFilterItems>
        <field>Activation__c.No_of_eSim__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>