force-app/main/default/objects/Case/fields/No_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Lines__c</fullName>
    <label>No of Lines</label>
    <summarizedField>Activation__c.No_of_Activation_Lines__c</summarizedField>
    <summaryForeignKey>Activation__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>