force-app/main/default/objects/Case/fields/npstoday__Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>npstoday__Campaign_Id__c</fullName>
    <description>the campaign id chosen by the process builder</description>
    <label>Campaign Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>