force-app/main/default/objects/Case/fields/Number_Analysis_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Number_Analysis_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customers can accept number analyses in the portal</description>
    <label>Number Analysis Accepted</label>
    <type>Checkbox</type>
</CustomField>