force-app/main/default/objects/Case/fields/Number_List__c.field-meta.xml
<CustomField>
    <fullName>Number_List__c</fullName>
    <inlineHelpText>Please remember to add a Number list if you are working on a Fixed Activation Case</inlineHelpText>
    <label>Number List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>