force-app/main/default/objects/Case/fields/Onboarding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Completed</label>
    <type>Checkbox</type>
</CustomField>