force-app/main/default/objects/Case/fields/OPEX_WBS__c.field-meta.xml
<CustomField>
    <fullName>OPEX_WBS__c</fullName>
    <description>ACTIVATION. User story 405</description>
    <formula>Account.OPEX_WBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WBS number as entered on Account</inlineHelpText>
    <label>WBS Opex (Account)</label>
    <type>Text</type>
</CustomField>