force-app/main/default/objects/Case/fields/Opportunity_K12__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_K12__c</fullName>
    <description>Activation cases are related to an opportunity via a quote. The K12 amount has a say when it comes to deciding if a project manager should be assigned for the activation process or not</description>
    <formula>Quote__r.SBQQ__Opportunity2__r.K12_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity K12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>