force-app/main/default/objects/Case/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>The type of opportunity is used as a parameter when deciding if an activation case should have a project manager assigned or not</description>
    <formula>TEXT(Quote__r.SBQQ__Opportunity2__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>