force-app/main/default/objects/Case/fields/Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Order_Form__c</fullName>
    <inlineHelpText>Please remember to attach an Order Form when you are working on a Fiber or 4G Activation Case.</inlineHelpText>
    <label>Order Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>