force-app/main/default/objects/Case/fields/Outstanding_activations__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_activations__c</fullName>
    <description>Specifies how many activation headers do not have their progress set to either fulfilled or cancelled such that the case is eligible to be closed.</description>
    <inlineHelpText>In order to close a case, all activation headers must have their progress at either fulfilled or cancelled.</inlineHelpText>
    <label>Outstanding activations</label>
    <summaryFilterItems>
        <field>Activation__c.Activation_progress__c</field>
        <operation>notEqual</operation>
        <value>Fulfilled, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>