force-app/main/default/objects/Case/fields/OW_tickets__c.field-meta.xml
<CustomField>
    <fullName>OW_tickets__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Showing the number of OW tickets created related to the case</description>
    <inlineHelpText>Showing the number of OW tickets created related to the case</inlineHelpText>
    <label>OW tickets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>