force-app/main/default/objects/Case/fields/Owner_role__c.field-meta.xml
<CustomField>
    <fullName>Owner_role__c</fullName>
    <description>The name of the case owners role used for list views</description>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner role</label>
    <type>Text</type>
</CustomField>