force-app/main/default/objects/Case/fields/Portal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Portal_Comments__c</fullName>
    <label>Portal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>