force-app/main/default/objects/Case/fields/Portal_User_Note__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If community user adds a case feed, this field is checked</description>
    <label>Portal User Note</label>
    <type>Checkbox</type>
</CustomField>