force-app/main/default/objects/Case/fields/Portal_User_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Note_Date__c</fullName>
    <description>Date for when Onboarding Portal User added the Note</description>
    <label>Portal User Note Date</label>
    <type>DateTime</type>
</CustomField>