force-app/main/default/objects/Case/fields/Portal_User_Submitted_Data__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Submitted_Data__c</fullName>
    <description>The date the Portal user submitted the collected data from the portal</description>
    <label>Portal User Submitted Data</label>
    <type>DateTime</type>
</CustomField>