force-app/main/default/objects/Case/fields/Power_of_attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_attorney__c</fullName>
    <inlineHelpText>Please specify the status of the power of attorney document</inlineHelpText>
    <label>Power of attorney</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received and attached to case</fullName>
            </value>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>Requested but not yet received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>