force-app/main/default/objects/Case/fields/Primary_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases (Primary Order)</relationshipLabel>
    <relationshipName>Cases_Primary_Order</relationshipName>
    <type>Lookup</type>
</CustomField>