force-app/main/default/objects/Case/fields/Product_Group_Data_Datanet__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Data_Datanet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Group - Data &amp; Datanet</label>
    <type>Checkbox</type>
</CustomField>