force-app/main/default/objects/Case/fields/Product_Group_Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Home_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Group - Home Office</label>
    <type>Checkbox</type>
</CustomField>