force-app/main/default/objects/Case/fields/Product_Group_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Group - Mobile</label>
    <type>Checkbox</type>
</CustomField>