force-app/main/default/objects/Case/fields/Product_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Product_Preferences__c</fullName>
    <description>Added for Business Internet</description>
    <label>Product Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>