force-app/main/default/objects/Case/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <description>Used for overview and reporting purposes</description>
    <inlineHelpText>Indicate which product group - if possible - that the case is related to</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Telia Home Office</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Grossist Fixed</fullName>
            </value>
            <value>
                <fullName>Cross-Border</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>SMS manager</fullName>
                <isActive>false</isActive>
                <label>SMS manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>