force-app/main/default/objects/Case/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <description>Internal field used as reference in email templates (eg. RPA email template Rabat bundle robot)</description>
    <formula>Quote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>