force-app/main/default/objects/Case/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <description>Field created to use Quote Number in mail templates</description>
    <formula>Quote__r.Name</formula>
    <label>QuoteNumber</label>
    <type>Text</type>
</CustomField>