force-app/main/default/objects/Case/fields/Redirected_to__c.field-meta.xml
<CustomField>
    <fullName>Redirected_to__c</fullName>
    <description>CS. Used for tracking who a case is redirected to, if and when the case is with someone not on salesforce</description>
    <inlineHelpText>Who are you redirecting the case to?</inlineHelpText>
    <label>Redirected to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ekstern</fullName>
            </value>
            <value>
                <fullName>Sergel</fullName>
            </value>
            <value>
                <fullName>Norlys</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Placeholder for Internal Support and Order Fulfilment Case</fullName>
            </value>
            <value>
                <fullName>1 Billing (AO Fokus)</fullName>
                <isActive>false</isActive>
                <label>1 Billing (AO Fokus)</label>
            </value>
            <value>
                <fullName>AO Fokus</fullName>
                <isActive>false</isActive>
                <label>AO Fokus</label>
            </value>
            <value>
                <fullName>Bosager (Sergel)</fullName>
                <isActive>false</isActive>
                <label>Bosager (Sergel)</label>
            </value>
            <value>
                <fullName>Bruce&apos;s Team</fullName>
                <isActive>false</isActive>
                <label>Bruce&apos;s Team</label>
            </value>
            <value>
                <fullName>Claus Dalsgaard</fullName>
                <isActive>false</isActive>
                <label>Claus Dalsgaard</label>
            </value>
            <value>
                <fullName>Cope</fullName>
                <isActive>false</isActive>
                <label>Cope</label>
            </value>
            <value>
                <fullName>Customer finance (Sergel)</fullName>
                <isActive>false</isActive>
                <label>Customer finance (Sergel)</label>
            </value>
            <value>
                <fullName>DOK, NRI, DESIGN (technology)</fullName>
                <isActive>false</isActive>
                <label>DOK, NRI, DESIGN (technology)</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
                <isActive>false</isActive>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>Eltel (fiber bestilling)</fullName>
                <isActive>false</isActive>
                <label>Eltel (fiber bestilling)</label>
            </value>
            <value>
                <fullName>Fibia (fiber bestilling)</fullName>
                <isActive>false</isActive>
                <label>Fibia (fiber bestilling)</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <isActive>false</isActive>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Finans</fullName>
                <isActive>false</isActive>
                <label>Finans</label>
            </value>
            <value>
                <fullName>Fixed-Enterprise</fullName>
                <isActive>false</isActive>
                <label>Fixed-Enterprise</label>
            </value>
            <value>
                <fullName>Fraud</fullName>
                <isActive>false</isActive>
                <label>Fraud</label>
            </value>
            <value>
                <fullName>God</fullName>
                <isActive>false</isActive>
                <label>God</label>
            </value>
            <value>
                <fullName>Grossistnp</fullName>
                <isActive>false</isActive>
                <label>Grossistnp</label>
            </value>
            <value>
                <fullName>HPSM</fullName>
                <isActive>false</isActive>
                <label>HPSM</label>
            </value>
            <value>
                <fullName>Ingoing payment (Sergel)</fullName>
                <isActive>false</isActive>
                <label>Ingoing payment (Sergel)</label>
            </value>
            <value>
                <fullName>Invoice (Telia)</fullName>
                <isActive>false</isActive>
                <label>Invoice (Telia)</label>
            </value>
            <value>
                <fullName>Invoice Mobil</fullName>
                <isActive>false</isActive>
                <label>Invoice Mobil</label>
            </value>
            <value>
                <fullName>Jira</fullName>
                <isActive>false</isActive>
                <label>Jira</label>
            </value>
            <value>
                <fullName>Kisbi Support</fullName>
                <isActive>false</isActive>
                <label>Kisbi Support</label>
            </value>
            <value>
                <fullName>Michael Laudrup</fullName>
                <isActive>false</isActive>
                <label>Michael Laudrup</label>
            </value>
            <value>
                <fullName>Norlys (eniig+Sydenergi)</fullName>
                <isActive>false</isActive>
                <label>Norlys (eniig+Sydenergi)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>