force-app/main/default/objects/Case/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>