force-app/main/default/objects/Case/fields/Reminders_Sent_to_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Reminders_Sent_to_Portal_User__c</fullName>
    <description>Number of reminders sent to portal user regarding this case.</description>
    <label>Reminders Sent to Portal User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>