force-app/main/default/objects/Case/fields/Requested_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Requested_delivery_date__c</fullName>
    <inlineHelpText>The delivery date requested by sales (the start date of the contract)</inlineHelpText>
    <label>Requested delivery date</label>
    <type>Date</type>
</CustomField>