force-app/main/default/objects/Case/fields/Root_BAN__c.field-meta.xml
<CustomField>
    <fullName>Root_BAN__c</fullName>
    <description>The root billing account number for the account related to this activation case.</description>
    <inlineHelpText>The root billing account number for the account related to this activation case.</inlineHelpText>
    <label>Root BAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>