force-app/main/default/objects/Case/fields/Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales rep who made the sale of the products on the quote.</description>
    <inlineHelpText>The sales rep who made the sale of the products on the quote.</inlineHelpText>
    <label>Sales rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>