force-app/main/default/objects/Case/fields/SalesRep_same_as_User__c.field-meta.xml
<CustomField>
    <fullName>SalesRep_same_as_User__c</fullName>
    <formula>IF( Sales_rep__c  =  $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesRep same as User</label>
    <type>Checkbox</type>
</CustomField>