force-app/main/default/objects/Case/fields/SalesSpecialistNOTneeded__c.field-meta.xml
<CustomField>
    <fullName>SalesSpecialistNOTneeded__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.SalesSpecialistNOTneeded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Specialist NOT needed</label>
    <type>Checkbox</type>
</CustomField>