force-app/main/default/objects/Case/fields/Send_email_receipt__c.field-meta.xml
<CustomField>
    <fullName>Send_email_receipt__c</fullName>
    <description>CS. Used to control when to send out auto-responses to manually created cases</description>
    <inlineHelpText>Do you want to send the customer an email receipt when the case is created?</inlineHelpText>
    <label>Send email receipt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>