force-app/main/default/objects/Case/fields/SIP_Trunk_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunk_IP_Address__c</fullName>
    <inlineHelpText>Please remember to add a SIP Trunk IP Address if you are working on a Fixed Activation Case</inlineHelpText>
    <label>SIP Trunk IP Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>