force-app/main/default/objects/Case/fields/SLA_segment__c.field-meta.xml
<CustomField>
    <fullName>SLA_segment__c</fullName>
    <description>Only used for reports to create relationship between cases and entitlements, since database structure does not allow this as standard.</description>
    <formula>Entitlement.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only used for reports to create relationship between cases and entitlements, since database structure does not allow this as standard.</inlineHelpText>
    <label>SLA segment</label>
    <type>Text</type>
</CustomField>