force-app/main/default/objects/Case/fields/SLA_trigger__c.field-meta.xml
<CustomField>
    <fullName>SLA_trigger__c</fullName>
    <description>This is a field that is controlled by the Milestone status, and this field controls the field &quot;SLA Status&quot;, which is used to display how much time is left until end of SLA.</description>
    <inlineHelpText>This is not at UI-field, but it controls the field value of the &quot;SLA Status&quot; field</inlineHelpText>
    <label>SLA trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#33FF33</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#3366FF</color>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>