force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source Email</label>
    <type>Email</type>
</CustomField>