force-app/main/default/objects/Case/fields/Special_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Date__c</fullName>
    <inlineHelpText>If a special delivery date is agreed with customer - then use this field to indicate the special delivery date. This should be used together with the Entitlement &apos;Express Delivery&apos; which will use this field to ensure correct overview</inlineHelpText>
    <label>Special Delivery Date</label>
    <type>Date</type>
</CustomField>