force-app/main/default/objects/Case/fields/Special_Delivery_date_milestone_timer__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_date_milestone_timer__c</fullName>
    <description>This field calculates the time in muínutes from the case cration time until the special delivery date adgreed with the customer for express delivery cases. The value calculated in this field is used to set the milestone correctly on the case</description>
    <formula>IF(NOT( ISBLANK(Special_Delivery_Date__c)), 

((5 * ( FLOOR( ( Special_Delivery_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
Special_Delivery_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(NOW()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(NOW()) - DATE( 1900, 1, 8), 7 ) ) ))*8.8*60


,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Delivery date milestone timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>