force-app/main/default/objects/Case/fields/Status_before_Paused__c.field-meta.xml
<CustomField>
    <fullName>Status_before_Paused__c</fullName>
    <description>When setting follow-up date status is saved, to be used when follow-up date is reached</description>
    <label>Status before Paused</label>
    <length>30</length>
    <type>Text</type>
</CustomField>